Wed Oct 13 12:10:02 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread_win32.c (w32_error): get English message first, instead
	  of system default. see [ruby-core:32765].
	  [experimental]

Wed Oct 13 11:04:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* debug.c (ruby_set_debug_option): define always for binary
	  compatibility with debug env enabled binary.

	* signal.c (ruby_enable_coredump): ditto.

Wed Oct 13 10:52:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (ruby_executable_node): missing prototype.

Wed Oct 13 05:23:04 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* missing/strchr.c: add strlen's prototype.

	* missing/strtrr.c: ditto.

Wed Oct 13 00:21:17 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/rubyext.c (struct mktime_arg): constified.

	* ext/syck/rubyext.c (mktime_do, mktime_r, rb_syck_mktime): fix
	  function signatures.

Wed Oct 13 00:18:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c (MurmurMagic): get rid of literal overflow.

	* configure.in (RUBY_CHECK_PRINTF_PREFIX): check for printf format
	  specifier if possible.

Tue Oct 12 23:58:19 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_open_osfhandle, rb_w32_wopen, rb_w32_pipe):
	  use uintptr_t instead of long for win64.

	* win32/win32.c (socketpair_internal): suppress warnings.

	* win32/win32.c (ftruncate): use HANDLE instead of long for win64.

	* vsnprintf.c (BSD_vfprintf): fix cast.

	* numeric.c (rb_num2fix): result of rb_num2long is SIGNED_VALUE.

	* compile.c (iseq_build_body), error.c (set_syserr, get_syserr),
	  (syserr_initialize), gc.c (define_final, rb_gc_copy_finalizer),
	  (run_final), hash.c (rb_hash_aref, rb_hash_lookup2),
	  (rb_hash_fetch_m, rb_hash_clear, rb_hash_aset, eql_i),
	  iseq.c (iseq_load, iseq_data_to_ary), marshal.c (r_symlink),
	  thread.c (rb_thread_local_aref),
	  variable.c (generic_ivar_remove, ivar_get, rb_const_get_0),
	  (rb_cvar_get), vm.c (rb_vm_check_redefinition_opt_method),